src/test/ui/typeck/issue-91334.stderr
error: this file contains an unclosed delimiter
  --> $DIR/issue-91334.rs:10:23
   |
LL | fn f(){||yield(((){),
   |       -       -       ^
   |       |       |
   |       |       unclosed delimiter
   |       unclosed delimiter

error: this file contains an unclosed delimiter
  --> $DIR/issue-91334.rs:10:23
   |
LL | fn f(){||yield(((){),
   |       -       -       ^
   |       |       |
   |       |       unclosed delimiter
   |       unclosed delimiter

error: expected one of `)`, `,`, `.`, `?`, or an operator, found `{`
  --> $DIR/issue-91334.rs:10:19
   |
LL | fn f(){||yield(((){),
   |                   ^
   |                   |
   |                   expected one of `)`, `,`, `.`, `?`, or an operator
   |                   help: missing `,`

error: mismatched closing delimiter: `)`
  --> $DIR/issue-91334.rs:10:19
   |
LL | fn f(){||yield(((){),
   |                -  ^^ mismatched closing delimiter
   |                |  |
   |                |  unclosed delimiter
   |                closing delimiter possibly meant for this

error[E0308]: mismatched types
  --> $DIR/issue-91334.rs:10:8
   |
LL | fn f(){||yield(((){),
   |       -^^^^^^^^^^^^^^^ expected `()`, found generator
   |       |
   |       possibly return type missing here?
   |
   = note: expected unit type `()`
              found generator `[generator@$DIR/issue-91334.rs:10:8: 10:23]`

error: aborting due to 5 previous errors

For more information about this error, try `rustc --explain E0308`.
